src/db_layer/src/jaldb_context.h

struct jaldb_segment;
struct jaldb_context_t;
/**
* jaldb_context type
*/
typedef struct jaldb_context_t jaldb_context;
/**
* Define bit flags to represent settings for the Berkeley DB
*/
enum jaldb_flags {
	JDB_NONE = 0,
	JDB_READONLY = 1,
	JDB_DB_RECOVER = 2
};
/**
 * Creates an empty DB context.
 *
 * @return The created empty DB context.
 *
 */
jaldb_context *jaldb_context_create();