src/jaldb_inline_filter/sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub type uuid_t = [::std::os::raw::c_uchar; 16usize];
pub const jaldb_status_JALDB_E_INVAL: jaldb_status = -1024;
pub const jaldb_status_JALDB_E_UNKNOWN: jaldb_status = -1023;
pub const jaldb_status_JALDB_E_DB: jaldb_status = -1022;
pub const jaldb_status_JALDB_E_ALREADY_CONFED: jaldb_status = -1021;
pub const jaldb_status_JALDB_E_NO_MEM: jaldb_status = -1020;
pub const jaldb_status_JALDB_E_UNINITIALIZED: jaldb_status = -1019;
pub const jaldb_status_JALDB_E_INTERNAL_ERROR: jaldb_status = -1018;
pub const jaldb_status_JALDB_E_INITIALIZED: jaldb_status = -1017;
pub const jaldb_status_JALDB_E_CORRUPTED: jaldb_status = -1016;
pub const jaldb_status_JALDB_E_NONCE: jaldb_status = -1015;
pub const jaldb_status_JALDB_E_NOT_FOUND: jaldb_status = -1014;
pub const jaldb_status_JALDB_E_READ_ONLY: jaldb_status = -1013;
pub const jaldb_status_JALDB_E_QUERY_EVAL: jaldb_status = -1012;
pub const jaldb_status_JALDB_E_NOT_IMPL: jaldb_status = -1011;
pub const jaldb_status_JALDB_E_SIZE: jaldb_status = -1010;
pub const jaldb_status_JALDB_E_REJECT: jaldb_status = -1009;
pub const jaldb_status_JALDB_E_LAYOUT_VERSION_UNKNOWN: jaldb_status = -1008;
pub const jaldb_status_JALDB_E_NETWORK_DISCONNECTED: jaldb_status = -1007;
pub const jaldb_status_JALDB_E_INVAL_TIMESTAMP: jaldb_status = -1006;
pub const jaldb_status_JALDB_E_INVAL_RECORD_TYPE: jaldb_status = -1005;
pub const jaldb_status_JALDB_OK: jaldb_status = 0;
#[doc = " Enumeration for error codes returned by DB layer calls."]
pub type jaldb_status = ::std::os::raw::c_int;
#[doc = "!< Indicates a Journal Record */"]
pub const jaldb_rec_type_JALDB_RTYPE_JOURNAL: jaldb_rec_type = 1;
#[doc = "!< Indicates an Audit Record */"]
pub const jaldb_rec_type_JALDB_RTYPE_AUDIT: jaldb_rec_type = 2;
#[doc = "!< Indicates a Log Record */"]
pub const jaldb_rec_type_JALDB_RTYPE_LOG: jaldb_rec_type = 4;
#[doc = "!< Indicates the record type is unknown/unset */"]
pub const jaldb_rec_type_JALDB_RTYPE_UNKNOWN: jaldb_rec_type = 8;
#[doc = " Enum used to distinguish between record types"]
pub type jaldb_rec_type = ::std::os::raw::c_uint;
pub const jaldb_sync_stat_JALDB_NOT_CONFIRMED: jaldb_sync_stat = 0;
pub const jaldb_sync_stat_JALDB_NOT_SENT: jaldb_sync_stat = 1;
pub const jaldb_sync_stat_JALDB_SENT: jaldb_sync_stat = 2;
pub const jaldb_sync_stat_JALDB_SYNCED: jaldb_sync_stat = 3;
pub type jaldb_sync_stat = ::std::os::raw::c_uint;
#[doc = " This structure is used to insert/retrieve records from the database."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jaldb_record {
    #[doc = "!< The nonce used for network communications about this record."]
    pub network_nonce: *mut ::std::os::raw::c_char,
    #[doc = "!< The process ID of the process that created the record."]
    pub pid: u64,
    #[doc = "!< The User ID of process that generated the event."]
    pub uid: u64,
    #[doc = "!< Structure containing data regarding the system metadata, or NULL."]
    pub sys_meta: *mut jaldb_segment,
    #[doc = "!< Structure containing data regarding the app metadata, or NULL."]
    pub app_meta: *mut jaldb_segment,
    #[doc = "!< Structure containing data regarding the payload (journal audit or log data), or NULL."]
    pub payload: *mut jaldb_segment,
    #[doc = "!< The source of this record."]
    pub source: *mut ::std::os::raw::c_char,
    #[doc = "!< The hostname of the machine that created the record."]
    pub hostname: *mut ::std::os::raw::c_char,
    #[doc = "!< The timestamp of this record in XML Schema DateTime format."]
    pub timestamp: *mut ::std::os::raw::c_char,
    #[doc = "!< The username of the process that generated the event."]
    pub username: *mut ::std::os::raw::c_char,
    #[doc = "!< The security label of the process that generated the event."]
    pub sec_lbl: *mut ::std::os::raw::c_char,
    #[doc = "!< The in-database version of the record, currently always \\p 1."]
    pub version: ::std::os::raw::c_int,
    #[doc = "!< The type of the record"]
    pub type_: jaldb_rec_type,
    #[doc = "!< Indicates the outbound record status."]
    pub synced: jaldb_sync_stat,
    #[doc = "!< Indicates whether the inbound record has been confirmed as valid via digest_response from the publisher."]
    pub confirmed: ::std::os::raw::c_char,
    #[doc = "!< Indicates if the uid filed is valid."]
    pub have_uid: ::std::os::raw::c_char,
    #[doc = "!< The UUID of the machine that created the record."]
    pub host_uuid: uuid_t,
    #[doc = "!< The UUID of the record."]
    pub uuid: uuid_t,
}
#[test]
fn bindgen_test_layout_jaldb_record() {
    const UNINIT: ::std::mem::MaybeUninit<jaldb_record> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jaldb_record>(),
        136usize,
        concat!("Size of: ", stringify!(jaldb_record))
    );
    assert_eq!(
        ::std::mem::align_of::<jaldb_record>(),
        8usize,
        concat!("Alignment of ", stringify!(jaldb_record))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).network_nonce) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(network_nonce)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pid) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(pid))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).uid) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(uid))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sys_meta) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(sys_meta)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).app_meta) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(app_meta)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).payload) as usize - ptr as usize },
        40usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(payload))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).source) as usize - ptr as usize },
        48usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(source))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hostname) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(hostname)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timestamp) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(timestamp)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).username) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(username)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sec_lbl) as usize - ptr as usize },
        80usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(sec_lbl))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).version) as usize - ptr as usize },
        88usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(version))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        92usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(type_))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).synced) as usize - ptr as usize },
        96usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(synced))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).confirmed) as usize - ptr as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(confirmed)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).have_uid) as usize - ptr as usize },
        101usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(have_uid)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).host_uuid) as usize - ptr as usize },
        102usize,
        concat!(
            "Offset of field: ",
            stringify!(jaldb_record),
            "::",
            stringify!(host_uuid)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).uuid) as usize - ptr as usize },
        118usize,
        concat!("Offset of field: ", stringify!(jaldb_record), "::", stringify!(uuid))
    );
}
extern "C" {
    #[doc = " Function to destroy a jaldb_record.\n This will call appropriate destroy functions & free on all of it's members.\n @param [in,out] pprecord The jaldb_record to destroy. This will be set to NULL."]
    pub fn jaldb_destroy_record(pprecord: *mut *mut jaldb_record);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jaldb_context_t {
    _unused: [u8; 0],
}
#[doc = " jaldb_context type"]
pub type jaldb_context = jaldb_context_t;
#[doc = " Sets no LMDB performance flags, this is the slowest, but most reliable setting to prevent data loss or db corruption"]
pub const jaldb_flags_JDB_NONE: jaldb_flags = 0;
#[doc = " Sets no LMDB performance flags, this is the slowest, but most reliable setting to prevent data loss or db corruption"]
pub const jaldb_flags_JDB_READONLY: jaldb_flags = 1;
#[doc = " Sets MDB_NOMETASYNC\n No risk of db corruption, but could lose last transaction"]
pub const jaldb_flags_JDB_LMDB_PERFORMANCE_LEVEL1: jaldb_flags = 2;
#[doc = " Sets MDB_NOMETASYNC | MDB_NOSYNC\n This is the recommended setting and is much faster than JDB_LMDB_PERFORMANCE_LEVEL1.\n No risk of db corruption if file system preserves write order otherwise db corruption is possible.  Also could lose last transaction."]
pub const jaldb_flags_JDB_LMDB_PERFORMANCE_LEVEL2: jaldb_flags = 3;
#[doc = " Sets MDB_NOMETASYNC | MDB_NOSYNC | MDB_WRITEMAP | MDB_MAPASYNC\n WARNING!!! This setting is faster than JDB_LMDB_PERFORMANCE_LEVEL2\n However there is a very high risk of db corruption and data loss in case of a crash or power outage.  Also if this setting is used, all other JAL processes\n must use this exact same setting.  Overall this setting is not recommended to be used if the risk of db corruption is not acceptable."]
pub const jaldb_flags_JDB_LMDB_PERFORMANCE_LEVEL3: jaldb_flags = 4;
#[doc = " Define enum to represent settings for LMDB"]
pub type jaldb_flags = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Creates an empty DB context.\n\n @return The created empty DB context.\n"]
    pub fn jaldb_context_create() -> *mut jaldb_context;
}
